# fastapi_1

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  tasks.db
